tests/specs/ecosystem/std/testing/0_210_0.test
std/testing/0.210.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.210.0": "jsr:@std/assert@0.210.0",
      "jsr:@std/async@^0.210.0": "jsr:@std/async@0.210.0",
      "jsr:@std/fmt@^0.210.0": "jsr:@std/fmt@0.210.0"
    },
    "jsr": {
      "@std/assert@0.210.0": {
        "integrity": "2c1fa547f49be7db2687f98a89fe8fbb1aab9619848cebd21541a8f4f3f4f67f",
        "dependencies": [
          "jsr:@std/fmt@^0.210.0"
        ]
      },
      "@std/async@0.210.0": {
        "integrity": "c8a39080b08496dd5dc064d422ee5a21294b2df9f4ef961458855d9a8d246171"
      },
      "@std/fmt@0.210.0": {
        "integrity": "088522f368100771655e8aff9c7cafe999e9fd87f10515056d85e9c7db956b55"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:581:11
    | 
581 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
582 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
583 |   return it({
    | ^^^^^^^^^^^^^
584 |     ...options,
    | ^^^^^^^^^^^^^^^
585 |     only: true,
    | ^^^^^^^^^^^^^^^
586 |   });
    | ^^^^^
587 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:589:13
    | 
589 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
590 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
591 |   return it({
    | ^^^^^^^^^^^^^
592 |     ...options,
    | ^^^^^^^^^^^^^^^
593 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
594 |   });
    | ^^^^^
595 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


